# segmint

./: CLAUDE.md  README.md
.cursor/rules/: backend-framework.md  database-schema-design.md  development-roadmap.md  frontend-blueprint.md  main-rules.md  performance-optimization-plan.md  project-specifications.md  security-implementation-guide.md  technology-stack-overview.md  user-journey-map.md
.github/workflows/: backend-lint.yml  test.yml
backend/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/.github/workflows/: test.yml
backend/app/: main.py
backend/app/core/: agents.py  constants.py
backend/app/models/: persona.py
backend/app/routes/: api.py  persona.py  post.py  questions.py
backend/app/utils/: db.py
backend/scripts/: run_tests.sh
backend/tests/: README.md  conftest.py  test_agents.py  test_convert_serializable.py  test_db.py  test_is_firestore_sentinel.py  test_list_personas.py  test_main.py  test_persona.py  test_persona_routes.py  test_post_routes.py  test_questions.py  test_utils.py
frontend/: README.md  eslint.config.js  index.html  tailwind.config.ts  vite.config.ts.timestamp-1745047445224-acb75f61620dd.mjs
frontend/docs/planning/: welcome-screen-implementation.md
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: Animation.tsx  Footer.tsx
frontend/src/contexts/: PersonaContext.tsx
frontend/src/hooks/: useQuestions.ts
frontend/src/lib/: cookie.ts
frontend/src/pages/: ContentStudio.tsx  Index.tsx  Onboarding.tsx  Personas.tsx  PostSignup.tsx  Settings.tsx  SignIn.tsx  (+1 more)
(+34 files in other folders)
