[project]
name = "segmint-backend"
version = "0.1.0"
description = "Segmint backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "pydantic",
    "requests",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.pytest]
testpaths = ["tests"]
