[project]
name = "segmint-backend"
version = "0.1.0"
description = "Segmint backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "pydantic",
    "requests",
    "httpx",
    "firebase-admin",
    "firecrawl>=2.1.1",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.pytest]
testpaths = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
